[gd_scene load_steps=6 format=3 uid="uid://b0jrfuwpesw8k"]

[ext_resource type="Script" uid="uid://brlxknd7wxbk7" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://o5ccj6kf3yxm" path="res://ctrl_window.tscn" id="2_0xm2m"]
[ext_resource type="LabelSettings" uid="uid://6a6r6heb7hel" path="res://name_settings.tres" id="2_h2yge"]

[sub_resource type="QuadMesh" id="QuadMesh_7dm0k"]
size = Vector2(1280, 5)

[sub_resource type="QuadMesh" id="QuadMesh_ig7tw"]
size = Vector2(5, 720)

[node name="main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="lines" type="Node2D" parent="CanvasLayer"]

[node name="line_h" type="MeshInstance2D" parent="CanvasLayer/lines"]
position = Vector2(640, 120)
mesh = SubResource("QuadMesh_7dm0k")

[node name="MeshInstance2D" type="MeshInstance2D" parent="CanvasLayer/lines"]
position = Vector2(640, 360)
mesh = SubResource("QuadMesh_ig7tw")

[node name="bottom_left" type="BoxContainer" parent="CanvasLayer"]
offset_top = 120.0
offset_right = 640.0
offset_bottom = 720.0

[node name="score" type="Label" parent="CanvasLayer/bottom_left"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 128
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bottom_right" type="BoxContainer" parent="CanvasLayer"]
offset_left = 640.0
offset_top = 120.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="score" type="Label" parent="CanvasLayer/bottom_right"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 128
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="top_left" type="BoxContainer" parent="CanvasLayer"]
offset_right = 640.0
offset_bottom = 120.0

[node name="top_right" type="BoxContainer" parent="CanvasLayer"]
offset_right = 640.0
offset_bottom = 120.0

[node name="left_name" type="Label" parent="CanvasLayer"]
offset_right = 640.0
offset_bottom = 120.0
text = "Team 1"
label_settings = ExtResource("2_h2yge")
horizontal_alignment = 1
vertical_alignment = 1

[node name="right_name" type="Label" parent="CanvasLayer"]
offset_left = 640.0
offset_right = 1280.0
offset_bottom = 120.0
size_flags_horizontal = 10
text = "Team 2"
label_settings = ExtResource("2_h2yge")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Window" parent="." instance=ExtResource("2_0xm2m")]
visible = false

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]

[connection signal="button" from="Window" to="." method="_on_window_button"]
[connection signal="left_name_set" from="Window" to="." method="_on_window_left_name_set"]
[connection signal="left_score_set" from="Window" to="." method="_on_window_left_score_set"]
[connection signal="right_name_set" from="Window" to="." method="_on_window_right_name_set"]
[connection signal="right_score_set" from="Window" to="." method="_on_window_right_score_set"]
